fix column-wrapping issue

--- a/views/commands.sass
+++ b/views/commands.sass
@@ -78,6 +78,11 @@
       @include column-width(100% / 2)
 
       li
+        -webkit-column-break-inside: avoid;
+        -moz-column-break-inside:    avoid;
+        -o-column-break-inside:      avoid;
+        column-break-inside:         avoid;
+
         .summary
           height: 11.5px * 3
 
